[gd_scene load_steps=5 format=3 uid="uid://d1h0x31qje14x"]

[ext_resource type="PackedScene" uid="uid://hci3keyqh4dh" path="res://Assets/Rooms/BasicRoom/BasicRoom.blend" id="1_kjxkq"]
[ext_resource type="Script" uid="uid://bnlg8gty0dim5" path="res://Assets/Rooms/BasicRoom/basic_room.gd" id="1_m7l6p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kjxkq"]
size = Vector3(10, 1, 10)

[sub_resource type="SphereShape3D" id="SphereShape3D_m7l6p"]

[node name="BasicRoom" type="StaticBody3D"]
script = ExtResource("1_m7l6p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_kjxkq")

[node name="EnemyController" type="Node3D" parent="."]

[node name="BasicRoom" parent="." instance=ExtResource("1_kjxkq")]

[node name="Checker1" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.7)

[node name="CollisionShape3D1" type="CollisionShape3D" parent="Checker1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.53674e-07)
shape = SubResource("SphereShape3D_m7l6p")

[node name="Checker2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.7, 0, 0)

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Checker2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.78814e-07)
shape = SubResource("SphereShape3D_m7l6p")

[node name="Checker3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.78814e-07, 0, -5.7)

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Checker3"]
shape = SubResource("SphereShape3D_m7l6p")

[node name="Checker4" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.7, 0, 0)

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Checker4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.76837e-07, 0, 1.19209e-07)
shape = SubResource("SphereShape3D_m7l6p")

[connection signal="body_entered" from="Checker1" to="." method="_on_checker_1_body_entered"]

[editable path="BasicRoom"]
